@@ -1,24 +1,18 @@
 package com.company.naspolke.service;
 
 //import com.company.naspolke.model.Role;
-import com.company.naspolke.model.User;
+import com.company.naspolke.model.AppUser;
 //import com.company.naspolke.model.types.RoleType;
 import com.company.naspolke.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
-import java.util.List;
 import java.util.Optional;
-import java.util.Set;
-
-import static java.util.UUID.randomUUID;
 
 @Service
 public class UserServiceImplementation implements UserService {
 
-    private UserRepository userRepository;
+    private final UserRepository userRepository;
 
     @Autowired
     public UserServiceImplementation(UserRepository userRepository) {
@@ -26,15 +20,17 @@ public class UserServiceImplementation implements UserService {
     }
 
     @Override
-    public void registerUser(User user) {
-        userRepository.save(new User(
-                randomUUID(), user.getUserName(), user.getUserSurname(), user.getUserEmail(), user.getUserPassword(),
-                true, false, Collections.singleton(new SimpleGrantedAuthority("ROLE_USER")),
-                Set.of()));
+    public void registerUser(AppUser appUser) {
+        userRepository.save(appUser
+//                new User(
+//                randomUUID(), user.getUserName(), user.getUserSurname(), user.getUserEmail(), user.getUserPassword(),
+//                true, false, Collections.singleton(new SimpleGrantedAuthority("ROLE_USER")),
+//                Set.of())
+        );
     }
 
     @Override
-    public Optional<User> findUserByUserEmail(String userEmail) {
+    public Optional<AppUser> findUserByUserEmail(String userEmail) {
         return Optional.ofNullable(userRepository.findByUserEmail(userEmail));
     }
 }
